[package]
name = "ton-node-storage"
version = "0.1.0"
edition = "2018"


[dependencies]
arrayref = "0.3.6"
byteorder = "1.3.4"
failure = "0.1.6"
fnv = "1.0.6"
futures = "0.3.4"
hex = "0.4.2"
rocksdb = "0.13.0"
sha2 = "^0.8"

ton_api = { git = "https://github.com/tonlabs/ton-labs-tl.git", package = "ton_api" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }

[dev-dependencies]
rand = "0.7.3"