[package]
name = "ton-node-storage"
version = "0.1.0"
edition = "2018"


[dependencies]
async-trait = "0.1.31"
base64 = "0.12.2"
failure = "0.1.6"
fnv = "1.0.6"
futures = "0.3.4"
hex = "0.4.2"
lazy_static = "1.4.0"
log = "0.4.11"
rocksdb = "0.14.0"
regex = "1.3.9"
serde = "1.0.114"
serde_cbor = "0.11.1"
serde_derive = "1.0.114"
sha2 = "^0.8"
strum = "0.18.0"
strum_macros = "0.18.0"
tokio = { version = "0.2.21", features = ["fs", "sync", "time"] }

ton_api = { git = "https://github.com/tonlabs/ton-labs-tl.git", package = "ton_api" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }

[dev-dependencies]
rand = "0.7.3"
tokio = { version = "0.2.21", features = ["macros"] }

[features]
block_meta_test_counter = []